Kelsey Development Sandbox/src/objects/Clinician__c.object
<CustomObject>
    <fields>
        <fullName>Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center</label>
        <referenceTo>Center__c</referenceTo>
        <relationshipLabel>Clinicians</relationshipLabel>
        <relationshipName>Clinicians</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Clinician</label>
    <listViews>
        <fullName>My_Center_Clinicians</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Email__c</columns>
        <columns>Center__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>My Center Clinicians</label>
    </listViews>
    <nameField>
        <label>Clinician ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinicians</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>